--- a/pages/page-smart.html
+++ b/pages/page-smart.html
@@ -16,7 +16,7 @@
   <button onclick="generatePDF()" style="margin-top: 15px;">📥 Скачать PDF</button>
 </div> -->
 
-<h2>🧠 Умный ассистент</h2>
+<h2>⚡ консоль<</h2>
 <p style="font-size: 0.9em; color: #666; margin-bottom: 10px;">
   Введите команду:
 </p>
@@ -56,4 +56,5 @@
 /get_inspection [ID]
 <br>
 /show_tolerances size=[число] fit=[посадка]
+
 </div>
