--- a/pages/page-materials.html
+++ b/pages/page-materials.html
@@ -4,16 +4,159 @@
 
 <select id="materialSelect">
   <option value="">-- Выберите материал --</option>
-  <option>13ХФА</option>
+
+  <!-- Углеродистые и низколегированные стали -->
+  <option>Ст3сп</option>
+  <option>Ст20</option>
+  <option>Ст45</option>
+  <option>20</option>
+  <option>35</option>
+  <option>45</option>
   <option>09Г2С</option>
-  <option>12Х18Н10Т</option>
-  <option>15Х5М</option>
   <option>20Г2С</option>
-  <option>10Х17Н13М2Т</option>
-  <option>08Х18Н10</option>
   <option>20Г2Р</option>
+  <option>16ГС</option>
+  <option>17Г1С</option>
+
+  <!-- Легированные конструкционные стали -->
+  <option>30ХГСА</option>
+  <option>40Х</option>
+  <option>40ХН</option>
+  <option>35ХМ</option>
+  <option>13ХФА</option>
+
+  <!-- Жаропрочные стали -->
+  <option>15Х5М</option>
   <option>12Х1МФ</option>
   <option>15ХМ</option>
+  <option>18Х3М</option>
+  <option>10Х9МФБ</option>
+  <option>10Х11МФБ</option>
+  <option>12Х8ВФ</option>
+  <option>ЭИ415</option>
+  <option>12Х12В2МФ</option>
+  <option>15Х12В2МФБ</option>
+  <option>15Х25Т</option>
+
+  <!-- Нержавеющие стали -->
+  <option>08Х18Н10</option>
+  <option>08Х18Н10Т</option>
+  <option>12Х18Н10Т</option>
+  <option>10Х17Н13М2Т</option>
+  <option>03Х17Н14М3</option>
+  <option>03Х18Н11</option>
+  <option>08Х21Н6М2Т</option>
+  <option>08Х17Т</option>
+  <option>10Х23Н18</option>
+  <option>12Х18Н9</option>
+
+  <!-- Инструментальные стали -->
+  <option>У7</option>
+  <option>У8</option>
+  <option>У8Г</option>
+  <option>У10</option>
+  <option>У10А</option>
+  <option>У11</option>
+  <option>У12</option>
+  <option>У12А</option>
+  <option>9ХС</option>
+  <option>ХВГ</option>
+  <option>Х12</option>
+  <option>Х12М</option>
+  <option>Х12Ф1</option>
+  <option>Х12МФ</option>
+  <option>5ХНМ</option>
+  <option>4Х5МФС</option>
+  <option>3Х2В8Ф</option>
+  <option>Р6М5</option>
+  <option>Р18</option>
+  <option>Р9</option>
+
+  <!-- Чугуны -->
+  <option>СЧ15</option>
+  <option>СЧ20</option>
+  <option>СЧ25</option>
+  <option>СЧ30</option>
+  <option>СЧ40</option>
+  <option>ВЧ40</option>
+  <option>ВЧ45</option>
+  <option>ВЧ50</option>
+  <option>ВЧ60</option>
+  <option>ВЧ70</option>
+  <option>ВЧ80</option>
+  <option>КЧ30-6</option>
+  <option>КЧ33-8</option>
+  <option>КЧ35-10</option>
+  <option>КХ35</option>
+  <option>КХ6</option>
+  <option>ЧН15Д7</option>
+  <option>ЧН18Х9</option>
+  <option>АЧВ-2</option>
+  <option>ЧС8</option>
+
+  <!-- Цветные металлы -->
+  <option>М0</option>
+  <option>М1</option>
+  <option>М3</option>
+  <option>Л63</option>
+  <option>Л68</option>
+  <option>Л70</option>
+  <option>Л75</option>
+  <option>Л90</option>
+  <option>Л96</option>
+  <option>ЛА77-2</option>
+  <option>БрОЦ4-4-2.5</option>
+  <option>БрОЦС4-4-4</option>
+  <option>БрАЖ9-4</option>
+  <option>БрАЖМц9-4-4-4</option>
+  <option>БрБ2</option>
+  <option>БрКМц3-1</option>
+  <option>БрЖНМц5-1-1</option>
+  <option>БрОФ6.5-0.4</option>
+  <option>БрОФ7-0.2</option>
+  <option>БрОФ8-0.3</option>
+
+  <!-- Жаропрочные сплавы -->
+  <option>ХН35ВТ</option>
+  <option>ХН78Т</option>
+  <option>ХН60ВТ</option>
+  <option>ХН55ВМКТЮБ</option>
+  <option>ХН51ВМКТЮ</option>
+  <option>ХН38ВТ</option>
+  <option>ХН62МВТЮ</option>
+  <option>ЭП517</option>
+  <option>ЭП742</option>
+
+  <!-- Криогенные стали -->
+  <option>09Г2НДБ</option>
+  <option>10Г2ФБЮ</option>
+  <option>15Х2МФ</option>
+  <option>03Х11Н10М2Т</option>
+  <option>08Х10Т</option>
+  <option>08Х21Н10Т</option>
+  <option>03Х16Н15М3Б</option>
+  <option>04Х18Н10</option>
+  <option>09Х15Н4Г2Б</option>
+  <option>10Х14Г14Ю4</option>
+  <option>18Х9</option>
+  <option>36НТ</option>
+  <option>32НКД</option>
+  <option>06ХН28МДТ</option>
+  <option>08Х22Н6Т</option>
+  <option>АЖ 58</option>
+
+  <!-- Алюминиевые сплавы -->
+  <option>АМг5</option>
+  <option>Д16</option>
+  <option>В95</option>
+
+  <!-- Титановые сплавы -->
+  <option>ТТ3В</option>
+  <option>ОТ4-1</option>
+
+  <!-- Подшипниковая сталь -->
+  <option>ШХ15</option>
+
 </select>
 
 <button style="position: relative; left: 0px; top: 5px;" onclick="loadMaterial()">🔍 Показать свойства</button>
@@ -26,4 +169,5 @@
 
 <!-- <h3>➕ Добавить материал</h3>
 <input type="text" id="newMaterialName" placeholder="Марка стали">
+
 <button style="position: relative; left: 0px; top: 5px;" onclick="addNewMaterial()">Добавить</button> -->
