--- a/pages/page-compare.html
+++ b/pages/page-compare.html
@@ -3,6 +3,24 @@
 <h2>🔄 Сравнение стандартов</h2>
 <select id="compareSelect">
   <option value="API_6A_vs_GОСТ_12820">API 6A vs ГОСТ 12820</option>
+  <option value="API_5L_vs_ГОСТ_3262">API 5L vs ГОСТ 3262</option>
+  <option value="API_6D_vs_ГОСТ_12674">API 6D vs ГОСТ 12674</option>
+  <option value="ASME_B16_5_vs_ГОСТ_12820">ASME B16.5 vs ГОСТ 12820</option>
+  <option value="ASTM_A105_vs_ГОСТ_1050">ASTM A105 vs ГОСТ 1050</option>
+  <option value="ASTM_A182_vs_ГОСТ_25054">ASTM A182 vs ГОСТ 25054</option>
+  <option value="ASTM_A351_vs_ГОСТ_977">ASTM A351 vs ГОСТ 977</option>
+  <option value="AISI_321_vs_12Х18Н10Т">AISI 321 vs 12Х18Н10Т</option>
+  <option value="DIN_2391_vs_ГОСТ_8734">DIN 2391 vs ГОСТ 8734</option>
+  <option value="EN_1092-1_vs_ГОСТ_33259">EN 1092-1 vs ГОСТ 33259</option>
+  <option value="ГОСТ_33259_vs_ГОСТ_12820">ГОСТ 33259 vs ГОСТ 12820</option>
+  <option value="ГОСТ_8732_vs_API_5CT">ГОСТ 8732 vs API 5CT</option>
+  <option value="ГОСТ_14140_vs_ISO_9001">ГОСТ 14140 vs ISO 9001</option>
+  <option value="IEC_60534_vs_ГОСТ_Р_57894">IEC 60534 vs ГОСТ Р 57894</option>
+  <option value="ISO_5208_vs_ГОСТ_Р_56022">ISO 5208 vs ГОСТ Р 56022</option>
+  <option value="NACE_MR0175_vs_ГОСТ_5632">NACE MR0175 vs ГОСТ 5632</option>
+</select>
+<!-- <select id="compareSelect">
+  <option value="API_6A_vs_GОСТ_12820">API 6A vs ГОСТ 12820</option>
   <option value="ГОСТ_8732_vs_API_5CT">ГОСТ 8732 vs API 5CT</option>
   <option value="AISI_321_vs_12Х18Н10Т">AISI 321 vs 12Х18Н10Т</option>
   <option value="API_6D_vs_ГОСТ_12674">API 6D vs ГОСТ 12674</option>
@@ -10,6 +28,7 @@
   <option value="ASME_B16_5_vs_ГОСТ_12820">ASME B16.5 vs ГОСТ 12820</option>
   <option value="ГОСТ_33259_vs_ГОСТ_12820">ГОСТ 33259 vs ГОСТ 12820</option>
   <option value="ASTM_A351_vs_ГОСТ_977">ASTM A351 vs ГОСТ 977</option>
-</select>
+</select> -->
 <button style="left:0px; top: 10px; margin-top:10p; position: relative;"  onclick="compareStandards()">Сравнить</button>
+
 <div id="comparisonResult"></div>
