--- a/pages/page-tolerance.html
+++ b/pages/page-tolerance.html
@@ -1,21 +1,3 @@
-<!-- <h2>📏 Допуск по ГОСТ 25346</h2>
-<div class="input-group">
-  <input type="number" id="size" placeholder="Размер, мм" step="0.001">
-</div>
-<div class="input-group">
-  <select id="fit" onchange="updateRange()">
-    <option value="h7">h7</option>
-    <option value="H8">H8</option>
-    <option value="k6">k6</option>
-  </select>
-</div>
-<button onclick="calculate()">Показать допуск</button>
-<div id="result"></div>
-<button id="showTableBtn" onclick="showTable()" style="display:none">Показать в таблице</button>
-
-<button onclick="askAIaboutTolerance()">🤖 Спросить ИИ</button>
-<div id="ai-response" style="margin-top: 15px; padding: 10px; background: #f0f8ff; border-radius: 5px; display: none; white-space: pre-wrap;"></div>
-<div id="ai-response" style="margin-top: 15px; padding: 10px; background: #f0f8ff; border-radius: 5px; display: none;"></div> -->
 
 <h2>📏 Допуск по ГОСТ 25346</h2>
 
@@ -30,6 +12,60 @@
     <div class="input-group">
       <label for="fit">Посадка:</label>
       <select id="fit" onchange="updateFitInfo()">
+        <!-- Поля допусков отверстий -->
+        <option value="G7">G7 (отверстие, +0.012/+0.002)</option>
+        <option value="H7">H7 (отверстие, +0.010/0)</option>
+        <option value="K7">K7 (отверстие, 0/-0.010)</option>
+        <option value="M7">M7 (отверстие, -0.002/-0.012)</option>
+        <option value="N7">N7 (отверстие, -0.004/-0.014)</option>
+        <option value="S7">S7 (отверстие, -0.014/-0.024)</option>
+        <option value="Js7">Js7 (отверстие, ±0.005)</option>
+        <option value="F8">F8 (отверстие, +0.020/+0.006)</option>
+        <option value="H8">H8 (отверстие, +0.025/0)</option>
+        <option value="H9">H9 (отверстие, +0.040/0)</option>
+        <option value="H11">H11 (отверстие, +0.100/0)</option>
+        <option value="H12">H12 (отверстие, +0.250/0)</option>
+        <option value="H13">H13 (отверстие, +0.400/0)</option>
+        <option value="H14">H14 (отверстие, +0.600/0)</option>
+        <option value="H15">H15 (отверстие, +0.900/0)</option>
+        <option value="H16">H16 (отверстие, +1.400/0)</option>
+      
+        <!-- Поля допусков валов -->
+        <option value="g6">g6 (вал, -0.002/-0.008)</option>
+        <option value="h6">h6 (вал, 0/-0.006)</option>
+        <option value="k6">k6 (вал, +0.008/+0.002)</option>
+        <option value="m6">m6 (вал, +0.012/+0.006)</option>
+        <option value="n6">n6 (вал, +0.016/+0.010)</option>
+        <option value="p6">p6 (вал, +0.020/+0.014)</option>
+        <option value="r6">r6 (вал, +0.023/+0.015)</option>
+        <option value="s6">s6 (вал, +0.027/+0.019)</option>
+        <option value="js6">js6 (вал, ±0.003)</option>
+        <option value="f7">f7 (вал, -0.006/-0.016)</option>
+        <option value="d8">d8 (вал, -0.020/-0.034)</option>
+        <option value="e8">e8 (вал, -0.014/-0.028)</option>
+        <option value="h8">h8 (вал, 0/-0.025)</option>
+        <option value="u8">u8 (вал, +0.032/+0.018)</option>
+        <option value="h9">h9 (вал, 0/-0.040)</option>
+        <option value="d9">d9 (вал, -0.020/-0.045)</option>
+        <option value="f9">f9 (вал, -0.006/-0.031)</option>
+        <option value="a11">a11 (вал, -0.140/-0.200)</option>
+        <option value="b11">b11 (вал, -0.060/-0.120)</option>
+        <option value="c11">c11 (вал, -0.020/-0.080)</option>
+        <option value="d11">d11 (вал, -0.014/-0.075)</option>
+        <option value="h11">h11 (вал, 0/-0.100)</option>
+        <option value="b12">b12 (вал, -0.060/-0.140)</option>
+        <option value="h12">h12 (вал, 0/-0.250)</option>
+        <option value="h13">h13 (вал, 0/-0.400)</option>
+        <option value="h14">h14 (вал, 0/-0.600)</option>
+        <option value="h15">h15 (вал, 0/-0.900)</option>
+        <option value="h16">h16 (вал, 0/-1.400)</option>
+      
+        <!-- Поля допусков, не относящиеся к размерам отверстий и валов -->
+        <option value="± IT14/2">± IT14/2 (±0.125)</option>
+        <option value="± IT15/2">± IT15/2 (±0.200)</option>
+        <option value="± IT16/2">± IT16/2 (±0.300)</option>
+      </select>
+<!--       <select id="fit" onchange="updateFitInfo()">
         <option value="h7">h7 (вал, 0/-0.025)</option>
         <option value="H8">H8 (отверстие, +0.039/0)</option>
         <option value="k6">k6 (вал, +0.018/+0.012)</option>
@@ -38,12 +74,8 @@
         <option value="g6">g6 (вал, -0.009/-0.025)</option>
         <option value="H7">H7 (отверстие, +0.025/0)</option>
         <option value="F8">F8 (отверстие, +0.043/+0.025)</option>
-      </select>
-      <!-- <select id="fit" onchange="updateFitInfo()">
-        <option value="h7">h7 (вал, 0/-0.025)</option>
-        <option value="H8">H8 (отверстие, +0.039/0)</option>
-        <option value="k6">k6 (вал, +0.018/+0.002)</option>
       </select> -->
+
     </div>
   </div>
 
@@ -121,4 +153,5 @@
 
 <!-- AI раздел (закомментирован как было) -->
 <!-- <button onclick="askAIaboutTolerance()">🤖 Спросить ИИ</button> -->
+
 <div id="ai-response" style="margin-top: 15px; padding: 10px; background: #f0f8ff; border-radius: 5px; display: none; white-space: pre-wrap;"></div>
