--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
     <br>
     <h3>Меню</h3>
     <ul>
-      <li onclick="showPage('page-mailer')">📧 репорт</li>
+<!--       <li onclick="showPage('page-mailer')">📧 репорт</li> -->
 
       <li onclick="showPage('page-inspection')">🔍 Проверки</li>
       <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li>
@@ -196,6 +196,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
