--- a/pages/page-tolerance.html
+++ b/pages/page-tolerance.html
@@ -114,9 +114,9 @@
   <button style="width: 80%; left: 0;" class="calculate-btn" onclick="calculate()">
       Рассчитать допуск
   </button>
-  <button type="button" onclick="startVoiceInput()" style="background: #4CAF50; color: white; padding: 10px; border: none; border-radius: 6px; cursor: pointer; margin-top: 10px;">
+<!--   <button type="button" onclick="startVoiceInput()" style="background: #4CAF50; color: white; padding: 10px; border: none; border-radius: 6px; cursor: pointer; margin-top: 10px;">
     🎤 Нажми и скажи: "Размер 50, h7"
-  </button>
+  </button> -->
   <!-- Результаты -->
   <div id="result" class="result-container"></div>
 
@@ -181,3 +181,4 @@
 <!-- AI раздел (закомментирован как было) -->
 <!-- <button onclick="askAIaboutTolerance()">🤖 Спросить ИИ</button> -->
 <div id="ai-response" style="margin-top: 15px; padding: 10px; background: #f0f8ff; border-radius: 5px; display: none; white-space: pre-wrap;"></div>
+
