--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
     <br>
     <h3>Меню</h3>
     <ul>
-      <li onclick="showPage('page-control-params')">⚙️ Параметры контроля</li>
+      <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
+<!--       <li onclick="showPage('page-control-params')">⚙️ Параметры контроля</li> -->
       <li onclick="showPage('page-mailer')">📧 репорт</li>
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
       <!-- <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li> -->
@@ -200,5 +201,6 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
