--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
     <h3>Меню</h3>
     <ul>
       <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
-<!--       <li onclick="showPage('page-control-params')">⚙️ Параметры контроля</li> -->
-      <li onclick="showPage('page-mailer')">📧 репорт</li>
+      <li onclick="showPage('page-tolerance')">📏 Допуски</li>
+      <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
+
+      <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
       <!-- <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li> -->
       <!-- <li onclick="showPage('page-checklist')">📎 Комплектность</li> -->
-      <li onclick="showPage('page-tolerance')">📏 Допуски</li>
-      <li onclick="showPage('page-materials')">🔧 Материалы</li>
+
+      <li onclick="showPage('page-mailer')">📧 репорт</li>
+      <!-- <li onclick="showPage('page-materials')">🔧 Материалы</li> -->
       <li onclick="showPage('page-standards')">📚 Стандарты</li>
       <!-- <li onclick="showPage('page-compare')">🔄 Сравнение</li> -->
       <li onclick="showPage('page-company')">🏭 Предприятия</li>
@@ -201,6 +204,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
