--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
       <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
       <li onclick="showPage('page-tolerance')">📏 Допуски</li>
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
-
+       <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
       <!-- <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li> -->
@@ -47,7 +47,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
 
       <li onclick="showPage('page-mailer')">📧 репорт</li>
       <!-- <li onclick="showPage('page-materials')">🔧 Материалы</li> -->
-      <li onclick="showPage('page-standards')">📚 Стандарты</li>
+<!--       <li onclick="showPage('page-standards')">📚 Стандарты</li> -->
       <!-- <li onclick="showPage('page-compare')">🔄 Сравнение</li> -->
       <li onclick="showPage('page-company')">🏭 Предприятия</li>
       <li onclick="showPage('page-reminders')">🔔 Напоминания</li>
@@ -204,6 +204,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
