--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
        <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
       <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">📖 pdfreader</a></li>
+      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🌐 to_html</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
       <!-- <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li> -->
@@ -205,6 +206,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
