--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
       <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
       <li onclick="showPage('page-tolerance')">📏 Допуски</li>
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
-       <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
-      <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">📖 pdfreader</a></li>
-      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🌐 to_html</a></li>
+      <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
+      <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li>
+      <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">♻️ to_html</a></li>
+      <li><a href="htmlreader.html" style="color: inherit; text-decoration: none;">⌨️ html_Read</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
       <!-- <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li> -->
@@ -49,16 +50,16 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
 
       <li onclick="showPage('page-mailer')">📧 репорт</li>
       <!-- <li onclick="showPage('page-materials')">🔧 Материалы</li> -->
-<!--       <li onclick="showPage('page-standards')">📚 Стандарты</li> -->
+      <!-- <li onclick="showPage('page-standards')">📚 Стандарты</li> -->
       <!-- <li onclick="showPage('page-compare')">🔄 Сравнение</li> -->
-      <li onclick="showPage('page-company')">🏭 Предприятия</li>
+      <!-- <li onclick="showPage('page-company')">🏭 Предприятия</li> -->
       <li onclick="showPage('page-reminders')">🔔 Напоминания</li>
       <!-- <li onclick="showPage('page-translate')">🌐 Перевод</li> -->
       <!-- <li onclick="showPage('page-statistics')">📊 Статистика</li> -->
       <li onclick="showPage('page-inspector-profile')">👤 профиль</li>
       <li onclick="showPage('page-analytics')">📈 Аналитика</li> 
       <!-- <li onclick="showPage('page-add-item')">📗 Добавить изделие</li> -->
-      <li onclick="showPage('page-help')">📘 инфа</li> 
+      <!-- <li onclick="showPage('page-help')">📘 инфа</li>  -->
       <!-- <li onclick="showPage('page-smart')">⚡ консоль</li> -->
 
       <!-- <li onclick="showPage('page-skill-tree')">🌟 древо умений</li> -->
@@ -206,6 +207,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
