--- a/htmlreader.html
+++ b/htmlreader.html
@@ -32,6 +32,22 @@
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0,0,0,0.3);
     }
+    #toggle-btn2 {
+      position: fixed;
+      top: 50px;
+      right:0px;
+    margin: 12px;
+      z-index: 100;
+      background: #007acc;
+      color: white;
+      border: none;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      font-size: 18px;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+    }
 
     /* Выдвижная панель */
     #editor-panel {
@@ -123,8 +139,9 @@
 </head>
 <body>
   <!-- Кнопка "Редактировать" -->
+  
   <button id="toggle-btn" title="Редактировать код">📝</button>
-
+  <button id="toggle-btn2" style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 100%; position: absolute; top: 0; left: 0; margin: 10px;">↩️</a></button>
   <!-- Выдвижная панель -->
   <div id="editor-panel">
     <div id="editor-header">
