--- a/tesseract.html
+++ b/tesseract.html
@@ -190,7 +190,7 @@ h2
 <body>
   <div class="container">
     <h2>pdf > html</h2>
-    <p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 100%; position: absolute; top: 0; left: 0; margin: 10px;">↩️ в меню</a></p>
+        <p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 40px; width: 40px; position: absolute; top: 0; left: 0; margin: 10px;">↩️ </a></p>
     <div class="panel">
       <input type="file" id="pdfFile" accept="application/pdf" />
 <div class="buttons">
@@ -788,4 +788,5 @@ document.getElementById('closeHtmlOverlay').addEventListener('click', () => {
 });
   </script>
 </body>
+
 </html>
