--- a/pdfreader.html
+++ b/pdfreader.html
@@ -788,7 +788,7 @@
 </head>
 <body>
   <h1>PDF reader</h1>
-  <p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 100%; position: absolute; top: 0; left: 0; margin: 10px;">↩️ в меню</a></p>
+      <p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 40px; width: 40px; position: absolute; top: 0; left: 0; margin: 10px;">↩️ </a></p>
   <div class="file-section">
     <input type="file" id="pdfFile" accept="application/pdf">
     <label for="pdfFile">📂 Выберите PDF файл</label>
@@ -2409,4 +2409,5 @@ function goToDeepParser(pageNum) {
 
   </script>
 </body>
+
 </html>
