--- a/htmlreader.html
+++ b/htmlreader.html
@@ -141,7 +141,7 @@
   <!-- Кнопка "Редактировать" -->
   
   <button id="toggle-btn" title="Редактировать код">📝</button>
-  <button id="toggle-btn2" style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 100%; position: absolute; top: 0; left: 0; margin: 10px;">↩️</a></button>
+  <button id="toggle-btn2" style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; position: absolute; top: 0; left: 0; margin: 10px;">↩️</a></button>
   <!-- Выдвижная панель -->
   <div id="editor-panel">
     <div id="editor-header">
@@ -217,3 +217,4 @@
   </script>
 </body>
 </html>
+
