--- a/tesseract.html
+++ b/tesseract.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>pdf > html</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script src="https://unpkg.com/tesseract.js@5.0.3/dist/tesseract.min.js"></script>
@@ -790,3 +791,4 @@ document.getElementById('closeHtmlOverlay').addEventListener('click', () => {
 </body>
 
 </html>
+
