--- a/pdfreader.html
+++ b/pdfreader.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PDFlover — Обнажитель PDF</title>
   <style>
     :root {
@@ -2411,3 +2412,4 @@ function goToDeepParser(pageNum) {
 </body>
 
 </html>
+
